public/styles/main.css
:root {
    /* colors */
    --post-it: lightyellow;
    --background: rgba(186, 192, 156, 0.8);
    --navbar: burlywood;
    /* sizes */
    --scale-size: 1;
}

body {
    display: flex;
    flex-direction: column;
    background-color: var(--background);
    height: 100vh;
}

.display-area {
    margin: 0 auto;
    width: calc( var(--scale-size) * 960px);
    /* width: 960px; */
}

.header {
    background-image: url('../images/files-header-background.jpeg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    text-align: center;
    font-family: 'Courier Prime', monospace;
    margin-bottom: 12px;
    border: 5px solid rgba(231, 223, 212, 1);
}

.header-container {
    background-color:rgba(255, 255, 255, 0.7);
    color: black;
    left: 50%;
    transform: translate(-50%);
    width: 80%;
    align-items: center;
    justify-content: center;
    position: relative;
    padding: 10px;
}

h1 {
    padding-top: 10px;
    font-size: 44px;
}

.tagline {
    font-size: 16px;
}

nav {
    color: black;
    font-size: 20px;
}

.logout {
    display: inline;
}

label, input, button, select, textarea {
    font-size: 20px;
    font-weight: normal;
    line-height: 20px;
}

#search {
    position: absolute;
    color: black;
    top: 10px;
    right: 10px;
}

#search-icon {
    font-size: 19px;
}

input, textarea, .uneditable-input {
    width: 150px;
}

select, textarea, input[type="text"], input[type="password"], input[type="email"], input[type="url"], input[type="search"], .uneditable-input {
    display: inline-block;
    height: 26px;
    font-size: 16px;
    padding: 4px 6px;
    margin-bottom: 0px;
    font-family: 'Courier Prime', monospace;
}

input[type="checkbox"] {
    margin: -1px 0 0;
}

.btn-link {
    font-family: 'Courier Prime', monospace;
}

.corkboard {
    background-image: url('../images/corkboard.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    border: 5px solid rgba(121, 60, 47, 0.8);
    min-height: calc( var(--scale-size) * 960px);
    font-family: 'Courier Prime', monospace;
}

.postit-container {
    height: 100px;
    display: inline-flex;
    width: 30%;
    height: 100px;
    align-items: center;
    justify-content: center;
    position: relative;
}

.postit-image {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

h2 {
    font-family: 'Indie Flower', cursive;
    display: inline-block;
    padding-top: 40px;
    font-size: 33px;
    text-align: center;
    height: 90px;
    color: black;
    position: relative;
}

h3 {
    font-family: 'Courier Prime', monospace;
    font-size: 25px;
    color: black;
    display: inline-flex;
}

.username-heading:hover {
    color: #005580;
}

.plus-container {
    margin-left: 5px;
}

.post-its {
    font-family: 'Indie Flower', cursive;
    font-size: 25px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.tile {
    background-color: var(--post-it);
    margin: calc( var(--scale-size) * 10px);
    width: calc( var(--scale-size) * 150px);
    height: calc( var(--scale-size) * 150px);
    box-shadow: 0 6px 6px rgba(0,0,0,0.4);
    display: flex;
    text-align: center;
    align-items: center;
    justify-content: center;
    word-wrap: break-word;
    transition: transform .2s linear;
}

.tile:hover {
    transform: scale(1.1);
}

.tile-link:hover {
    text-decoration: none;
}

i {
    text-align: center;
    font-size: 36px;
    z-index: 2;
}

li {
    font-size: 20px;
    height: 100%;
    box-shadow: 0 6px 6px rgba(0,0,0,0.4);
    font-family: 'Indie Flower', cursive;
}

.li-container {
    min-height: 55px;
    display: block;
    margin-left: 20px;
    margin-top: 15px;
}

.list-item {
    display: inline-flex;
    background-color: var(--post-it);
    padding: 10px;
    align-items: center;
    justify-content: center;
}

.list-item-content {
    margin: 5px;
}

form {
    margin: 5px 2px 0 2px;
}

.form-container {
    font-size: 25px;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
}

.form {
    background-color: var(--post-it);
    margin: calc( var(--scale-size) * 10px);
    min-width: 300px;
    min-height: 200px;
    padding: 15px;
    box-shadow: 0 6px 6px rgba(0,0,0,0.4);
    display: flex;
    flex-direction: column;
    text-align: center;
    align-items: center;
    justify-content: center;
    word-wrap: break-word;
    transition: transform .2s linear;
}

.form p {
    margin-bottom: 20px;
    color: black;
}

.form-li {
    font-family: 'Courier Prime', monospace;
    color: black;
    font-size: 21px;
    box-shadow: none;
    margin-bottom: 5px;
}

textarea {
    min-height: 48px;
    width: 200px;
    margin-top: 5px;
    font-size: 16px;
}

.user-prompt {
    font-size: 16px;
    display: block;
}

ul {
    margin: 0 auto;
    list-style-type: none;
}

.tool-name, .category-name {
    color: black;
    font-size: 25px;
    margin-right: 10px;
}

.tool-description, .category-description {
    color: slategrey;
    line-height: 1.5;
    font-size: 20px;
    max-width: 500px;
    margin-right: 10px;
    word-wrap: break-word;
}

.avail-tools-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.available-tools {
    width: 317px;
    height: 35px;
    text-align: center;
    position: relative;
    display: inline-flex;
    left: 50%;
    transform: translate(-50%);
    background-color: var(--post-it);
    margin: 8px 0;
    padding: 15px;
    box-shadow: 0 6px 6px rgba(0,0,0,0.4);
}

.avail-tools-list {
    margin-left: 0;
}

#available-tools-label {
    font-family: 'Courier Prime', monospace;
    font-size: 25px;
    margin: 0 auto;
    padding: 0;
}

.submit-button {
    font-family: 'Courier Prime', monospace;
    border: 4px solid red;
    color: red;
    border-radius: 4px;
    padding: 7px 5px 5px 5px;
    background-color: white;
    transition: transform .2s linear;
}

.submit-button:hover {
    transform: scale(1.1);
}

label, .pencil, .plus-tool {
    color: #0088cc;
}

label:hover, .pencil:hover, .plus-tool:hover {
    color: #005580;
}

.login-reg-forms {
    display: flex;
    justify-content: center;
    padding-top: 25px;
    align-items: baseline;
}

.search-results-section {
    font-family: 'Indie Flower', cursive;
    background-color: var(--post-it);
    box-shadow: 0 6px 6px rgba(0,0,0,0.4);
    margin: 30px 0 0 20px;
    font-size: 30px;
    padding: 8px;
}

#search-results-header {
    display: flex;
}

.results-container {
    display: flex;
    flex-direction: column;
}

.user-card {
    left: 50%;
    transform: translate(-50%);
    font-size: 24px;
    position: absolute;
    width: fit-content;
    background-color: var(--post-it);
    box-shadow: 0 6px 6px rgba(0,0,0,0.4);
}

#category-list, .profile-ul {
    margin-bottom: 15px;
}

.simple-li {
    font-family: 'Courier Prime', monospace;
    box-shadow: none;
    line-height: 1.5;
}

.delete-item {
    display: inline-flex;
}

.button {
    border: none;
    background-color: rgba(255,255,255,0);
    color: #0088cc;
    font-size: 50px;
}

.button:hover {
    color: #005580;
}

.edit-cat-form {
    flex-direction: column;
}

